# agent-joes

./: .gitignore  README.md  SYSTEM.md  agent_service.py  app.py  build_vercel.py  pyproject.toml  recipe_agent_tui.py  requirements.txt  traderjoes.py  vercel.json
.codex/environments/: environment.toml
api/: index.py
api/web_dist/: chat.html  index.html
api/web_dist/assets/: chat-5d16c0a5.js  main-abaefbb1.js  styles-2bb38672.css
web/: chat.html  index.html  package-lock.json  package.json  vite.config.js
web/src/: chat.js  main.js  styles.css
