[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-joes"
version = "0.1.0"
description = "Trader Joe's price tracker and recipe agent in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "braintrust>=0.0.40",
    "claude-agent-sdk>=0.1.48",
    "fastapi>=0.117.1",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "twilio>=9.8.3",
    "uvicorn>=0.36.0",
    "webdriver-manager>=4.0.1",
]

[project.scripts]
traderjoes = "traderjoes:main"
recipe-agent-tui = "recipe_agent_tui:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
only-include = [
    "agent_service.py",
    "app.py",
    "traderjoes.py",
    "recipe_agent_tui.py",
    "README.md",
    "pyproject.toml",
]
